# AisleyScraper

./: README.html  README.md  pyproject.toml  requirements.txt
data/: NYC_stores.numbers  NYC_stores.tsv  stores.csv
docs/: filter-shopify-products.md
scripts/: audit_filter_sample.py  audit_missing_columns.py  audit_residue.py  backfill_gender_probs_csv.py  backfill_store_address_coords.py  backfill_supabase_images.py  check_product_type_samples.py  check_recent_consistency.py  check_run_store_preexistence.py  cleanup_hack_residue.py  cleanup_orphan_storage_objects.py  clear_product_tables.py  delete_scraped_images.py  delete_scraped_images_fast.py  diagnose_active_run.py  diagnose_crawl_store_runs.py  diagnose_staged_runs.py  diagnose_store_processing.py  export_dropped_gallery.py  find_unseen_seed.py  inspect_test_images.py  mark_audit_labels.py  monitor_live_writes.py  probe_supabase_images_upsert.py  repair_probe_supabase_images.py  reset_supabase_fresh_start.py  validate_classifier_scraped_sample.py  verify_classifier_threshold.py  verify_live_updates.py  verify_live_updates_30s.py  verify_restart_no_missing.py
supabase/: config.toml  schema.sql
tests/: test_cli_dedupe.py  test_cli_filter_products.py  test_cli_seed_backfill.py  test_cli_streaming_mode.py  test_csv_loader.py  test_fetcher_cache.py  test_gender_label.py  test_gender_probs.py  test_gender_probs_fallback.py  test_geocoding.py  test_image_validation.py  test_image_validation_toggle.py  test_image_verifier.py  test_item_uuid_extraction.py  test_local_output.py  test_orchestrator_pagination.py  test_phase2_image_cap.py  test_policy.py  test_price_extraction.py  test_product_url_extraction.py  (+4 more)
(+30 files in other folders)
